plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'escadas'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.session:spring-session-jdbc'
	runtimeOnly 'com.mysql:mysql-connector-j'
	implementation 'com.google.auth:google-auth-library-oauth2-http:1.30.1'
	implementation 'com.google.api-client:google-api-client:2.7.2'
	implementation 'com.google.apis:google-api-services-drive:v3-rev20220815-2.0.0'
	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.36.0'
	implementation 'com.openhtmltopdf:openhtmltopdf-pdfbox:1.0.10'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
}

bootRun {
	systemProperty 'file.encoding', 'UTF-8'
}

tasks.register('geraTokenDrive', JavaExec) {
	group = 'application'
	description = 'Gera token.json OAuth para Google Drive usando credentials.json.'
	classpath = sourceSets.main.runtimeClasspath
	mainClass = 'com.example.demo.dev.GeradorTokenDrive'
	if (project.hasProperty('args')) {
		args project.property('args').toString().split('\\s+')
	}
}

